Prevent focus marker on button from being clipped

--- a/src/components/notification/notification.less
+++ b/src/components/notification/notification.less
@@ -1,35 +1,35 @@
 @import '../styles/constants.less';
 
-.reactist-notification {
-    display: flex;
-    position: relative;
+.container-style() {
     box-sizing: border-box;
-    padding: 10px 14px;
-    align-items: flex-start;
     justify-content: space-between;
-    overflow: hidden;
-
+    align-items: flex-start;
+    padding: 10px 14px;
     border: 1px solid @color_border_grey;
     border-radius: @default-radius;
     box-shadow: @default-box-shadow;
     background: #fff;
-
-    font-size: @normal_font_size;
 }
 
-.reactist-notification--with-button {
-    padding: 0;
+.reactist-notification {
+    display: flex;
+    position: relative;
+    font-size: @normal_font_size;
+
+    &:not(.reactist-notification--with-button) {
+        .container-style();
+    }
 }
 
 .reactist-notification__button,
 .reactist-notification__close-button {
-    background: none;
     border: 0;
     padding: 0;
     margin: 0;
     cursor: pointer;
     transition-property: background-color;
     transition-duration: @standard-timing;
+    background: #fff;
 
     &:hover {
         background: @color_grey_10;
@@ -37,11 +37,13 @@
 }
 
 .reactist-notification__button {
-    flex: 1;
+    .container-style();
     display: flex;
-    padding: 10px 14px;
-    align-items: flex-start;
-    justify-content: space-between;
+    flex: 1;
+
+    &:hover + .reactist-notification__close-button {
+        background: @color_grey_10;
+    }
 }
 
 .reactist-notification__close-button {
